{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 1652,
  "lineage": "d1c58729-fe15-cda0-aef2-93226575cda0",
  "resources": [
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig_obligatorio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654394525:internet-gateway/igw-08322df5f72148995",
            "id": "igw-08322df5f72148995",
            "owner_id": "654654394525",
            "vpc_id": "vpc-0a20e957898ee6468"
          },
          "dependencies": [
            "module.aws.aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_route",
      "name": "ruta_a_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08322df5f72148995",
            "id": "r-rtb-0006d04277b9012231080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0006d04277b901223",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws.aws_internet_gateway.ig_obligatorio",
            "module.aws.aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_obligatorio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654394525:security-group/sg-0ceff67c8ef9f6644",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ceff67c8ef9f6644",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_obligatorio",
            "name_prefix": "",
            "owner_id": "654654394525",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_obligatorio"
            },
            "tags_all": {
              "Name": "sg_obligatorio"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a20e957898ee6468"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws.aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_A_obligatorio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654394525:subnet/subnet-00db96fbdba7cd9dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00db96fbdba7cd9dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654394525",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_A_obligatorio"
            },
            "tags_all": {
              "Name": "subnet_A_obligatorio"
            },
            "vpc_id": "vpc-0a20e957898ee6468"
          },
          "dependencies": [
            "module.aws.aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_B_obligatorio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654394525:subnet/subnet-0f08112e741022aeb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f08112e741022aeb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654394525",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_B_obligatorio"
            },
            "tags_all": {
              "Name": "subnet_B_obligatorio"
            },
            "vpc_id": "vpc-0a20e957898ee6468"
          },
          "dependencies": [
            "module.aws.aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_obligatorio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654394525:vpc/vpc-0a20e957898ee6468",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-04ffadc015857cd6a",
            "default_route_table_id": "rtb-0006d04277b901223",
            "default_security_group_id": "sg-0c707529151a7f97e",
            "dhcp_options_id": "dopt-068fd658d84a3f0eb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a20e957898ee6468",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0006d04277b901223",
            "owner_id": "654654394525",
            "tags": {
              "Name": "vpc-obligatorio"
            },
            "tags_all": {
              "Name": "vpc-obligatorio"
            }
          }
        }
      ]
    }
  ]
}